Oops, that was a lil early for that